# clonad

./: .gitignore  CLAUDE.md  README.md  cabal.project.freeze  clonad.cabal  flake.nix
app/: Main.hs
src/: Clonad.hs
